30 June 2005 Sylvain Pion
- prefix macros by CGAL_

========================== CGAL 3.1 =========================

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters

24 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

13 August 2004 Sylvain Pion
- Doc : fix typos "ForwardIteartor".

13 August 2004 Sylvain Pion
- Doc : fix typo in #include <CGAL/ch_akl_toussaint.h>.

04 May 2004 Andreas Fabri
- Added #include <CGAL/IO/Tee_for_output_iterator.h>  to ch_akl_toussaint.C

25 March 2004 Radu Ursu
- made the doc work with the current implementation of the manual tools

14 Mar 2004 Sylvain Pion
- Kill warning when -DNDEBUG.

21 Feb 2004 Sylvain Pion
- Move successor() and predecessor() to STL_Extension.

Version 3.54 (09 February 2004) [rursu]
- Updated headers for examples

3.53 (18 Jan 2004)
- Add missing CGAL_ prefix to some macros.

============================== CGAL 3.0 ===========================

3.52 (22 Sep 2003)
- new headers

3.51 (18 Sep 2003) [rursu]
- Changed example in the doc. Using ch_example_from_cin_to_cout.C from now on.

3.49 (10 Sep 2003)
- Qt_help_window class is in the namespace CGAL

3.48 (7 Sep 2003)
- rursu: demo use the new help class Qt_help_window instead of HelpWindow
- rursu: demo use new icon demoicon

3.47 (2 Sep 2003)
- Remove useless code in stl_extension.[hC]
- Remove traces of the leda traits classes (replaced by LEDA kernel traits CEP).

3.46 (23 Jul 2003)
- rursu: modified the doc to point to correct demo file convex_hull_2.C

3.45 (09 Jul 2003)
- rursu: replaced Leda based demo with Qt based demo

3.44 (22 Apr 2003)
- Fix typo.

3.43 (26 Feb 2003)
- kernel archetype test file added

3.42 (19 Feb 2003)
- just resubmit

3.4.1 (29 Jan 2003)
- replaced the usage of == and != by Equal_2 kernel functor
  in all 2d convex hull implementations

3.4 (14 Jan 2003)
- Equal_2 typedef added to the various traits classes
  to do: document it and use it in the implementations 